# rust-study-projects

./: Cargo.toml  README.md
projects/web-server/: 404.html  README.md  index.html
projects/web-server/src/: lib.rs
projects/webcam-live/: Cargo.toml  README.md  Trunk.toml  index.html
projects/webcam-live/src/: lib.rs  main.rs
