[package]
name = "webcam-live"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
sycamore = { version = "0.8", features = ["serde", "futures"] }
tracing = "0.1"
tracing-wasm = "0.2"
js-sys = "0.3"
wasm-bindgen = { version="0.2", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-futures = "0.4.29"

[dependencies.web-sys]
version = "0.3.70"
features = [
    "Window",
    "VideoTrack",
    "HtmlVideoElement",
    "HtmlSelectElement",
    "Navigator",
    "MediaStream",
    "MediaDeviceInfo",
    "MediaDeviceKind",
    "MediaStreamConstraints",
    "Permissions",
    "MediaDevices",
]